General cleanup before ch4 refinement

--- a/latex/ch0_abstract_acknowledgement.tex
+++ b/latex/ch0_abstract_acknowledgement.tex
@@ -3,7 +3,7 @@
 
 \renewcommand{\abstractname}{Acknowledgement}
 \begin{abstract}
-	I believe that all software should be free, libre, open, open-source. Hidden knowledge is the antithesis of science and progress. I owe much of my learning journey to software that has been made both free to read and free to use, and I have aimed to release every line of code I ever wrote in support of the publication of this thesis, and any and all self-learning, as fully open-source.
+	Hidden knowledge is the antithesis of science and progress. I owe much of my learning journey to software that is both free to read and free to use, and every line of code I wrote in support of this thesis has been published as open-source software with permissive licenses in the hopes that it helps others.
 \end{abstract}
 
 \vfill
