--- a/latex/ch3_methodology.tex
+++ b/latex/ch3_methodology.tex
@@ -474,6 +474,7 @@ As mentioned, Open-Unmix (\cite{umx}) has a reference PyTorch implementation\foo
 After the X-UMX modifications are described, we will look at which parts of Open-Unmix need to incorporate the PyTorch implementation of the sliCQT that was described in section \ref{sec:torchslicq}.\footnote{\url{https://github.com/sevagh/nsgt}} Finally, the convolutional denoising autoencoder model architectures of \textcite{plumbley1, plumbley2}  will be described, along with how they might be applied to the sliCQT.
 
 \subsubsection{Incorporating CrossNet-Open-Unmix}
+\label{sec:xumxinc}
 
 CrossNet-Open-Unmix (X-UMX) (\cite{xumx}) is a further development on Open-Unmix which improves the music demixing performance without adding any additional trainable parameters. All 4 target models are trained simultaneously instead of separately, which allows for loss functions that consider multiple targets. However, it requires more compute resources for training, since the GPU needs to store and train 4 independent target models simultaneously instead of separately.
 
