Improve proposal with IF feedback

--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1787,3 +1787,11 @@ doi = {10.1371/journal.pone.0212550}
       archivePrefix={arXiv},
       primaryClass={stat.ML}
 }
+
+@inproceedings{wavelets,
+author={Wolf, Guy and Mallat, Stéphane and Shamma, Shihab},
+booktitle={IEEE International Workshop on Machine Learning for Signal Processing},
+title={Audio source separation with time-frequency velocities},
+year={2014},
+pages={1-6},
+doi={10.1109/MLSP.2014.6958893}}
